tests/negative/semantic/import_circular/a.ci
import "input.ci";
int helper() { return 1; }
